# pi-distributed-computing

./: CMakeLists.txt  README.md  distmult_client.cc  distmult_client_2D.cc  distmult_server.cc  drpc_server_wrapper.go  grpc_proxy.go  matrix_handler.cc  matrix_handler.h  resource_scheduler.cc  resource_scheduler.h  task_handler.h  test_matrix_utils.cc  test_resource_scheduler.cc  test_task_queue.cc  utils.cc  utils.h  utils_2D.h
protos/: distmult_service.proto
